wip/httproutes.gateway.networking.k8s.io-invalid-backend-ref-unknown-kind.yaml
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-backend-ref-unknown-kind
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
  rules:
  - backendRefs:
    - group: unknownkind.example.com
      kind: NonExistent
      name: infra-backend-v1
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
